# smart_index

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
config/: events.yaml  paths.yaml  plotting.yaml  regime_rules.yaml  symbols.yaml
docs/: project_overview.md  roadmap.md
docs/methodology/: data_sources.md  regime_definition.md
scripts/: run_daily_features.py
src/smart_index/: __init__.py
src/smart_index/analytics/: __init__.py  regimes.py  surface.py
src/smart_index/data/: __init__.py  loaders.py
src/smart_index/features/: __init__.py  implied_vol.py  surface_features.py
src/smart_index/models/: __init__.py  models_init.py  regime_classifier.py
src/smart_index/pipelines/: __init__.py  feature_pipeline.py  pipelines_init.py
src/smart_index/utils/: __init__.py  dates.py  io.py  stats.py
src/smart_index/viz/: __init__.py  style.py  surface_plots.py  viz_init.py
tests/: test_implied_vol.py
